<resources>
    <string name="app_name">Aston_intensive_3</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="contact_manager">ContactManager</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
</resources>