<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/buttons_container"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_contact_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_contact"
            android:visibility="visible"
            app:shapeAppearance="@style/ThemeOverlay.Material3.Button" />

        <Button
            android:id="@+id/cancel_deletion_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel"
            android:visibility="gone"
            app:shapeAppearance="@style/ThemeOverlay.Material3.Button" />

        <Button
            android:id="@+id/done_deletion_contact_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/done"
            android:visibility="gone"
            app:shapeAppearance="@style/ThemeOverlay.Material3.Button" />

    </LinearLayout>

</RelativeLayout>